# brpc

./: .gitignore  CMakeLists.txt
example/bvar_c++/: CMakeLists.txt  benchmark.cpp  benchmark_atomic.cpp  bvar_test.cpp
src/: CMakeLists.txt
src/bvar/: variable.cpp
